--- a/index.css
+++ b/index.css
@@ -1,5 +1,6 @@
 body {
   font-family: Lato, sans-serif;
+  margin: 0 auto;
 }
 
 ul {
@@ -221,7 +222,11 @@ p {
   flex-direction: column;
   gap: 1rem;
   margin: 40px auto;
-  max-width: 500px;
+  max-width: 300px;
+}
+
+.contact-container.social-media {
+  align-items: center;
 }
 
 .contact-container input,
@@ -244,6 +249,12 @@ textarea {
   font-family: Lato, sans-serif;
   font-size: 1rem;
   font-weight: 600;
+}
+
+.footer-container {
+  display: flex;
+  justify-content: center;
+  background-color: #d9d9d9;
 }
 
 .animated {
@@ -338,5 +349,9 @@ a.dark-mode {
 
   .project-list {
     flex-direction: row;
+  }
+
+  .contact-container {
+    max-width: 500px;
   }
 }
